--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -10,6 +10,7 @@
 	--icon-box-seam: "\F1C7";
 	--icon-bug: "\F1DC";
 	--icon-bug-fill: "\F1DB";
+	--icon-chrome: "\F7D4";
 	--icon-clipboard2-check-fill: "\F724";
 	--icon-comments: "\F268";
 	--icon-date: "\F1F6";
@@ -17,6 +18,7 @@
 	--icon-edit: "\F4CA";
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
+	--icon-firefox: "\F7D6";
 	--icon-github: "\F3ED";
 	--icon-globe-americas: "\F882";
 	--icon-info-lg: "\F646";
@@ -26,6 +28,7 @@
 	--icon-newspaper: "\F4A3";
 	--icon-question-lg: "\F64E";
 	--icon-rss-fill: "\F521";
+	--icon-safari: "\F7D7";
 	--icon-stopwatch: "\F597";
 	--icon-star: "\F588";
 	--icon-star-fill: "\F586";
