--- a/standards/index.njk
+++ b/standards/index.njk
@@ -58,7 +58,7 @@ page_css: true
 This section contains an overview of my contributions to web standards since 2012.
 </div>
 
-<h2>Status legend</h2>
+<h2>Index ({{ standards.length }} proposals)</h2>
 
 <table class="status-legend">
 	<thead>
