Show intervals between spec milestonees

--- a/assets/tokens.css
+++ b/assets/tokens.css
@@ -17,6 +17,7 @@
 	--color-gray-40: hsl(var(--gray) 40%);
 	--color-gray-50: hsl(var(--gray) 50%);
 	--color-gray-60: hsl(var(--gray) 60%);
+	--color-gray-70: hsl(var(--gray) 70%);
 	--color-gray-80: hsl(var(--gray) 80%);
 	--color-gray-90: hsl(var(--gray) 90%);
 	--color-gray-95: hsl(var(--gray) 95%);
