--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -19,6 +19,7 @@
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
 	--icon-firefox: "\F7D6";
+	--icon-flag-fill: "\F3CB";
 	--icon-github: "\F3ED";
 	--icon-globe-americas: "\F882";
 	--icon-info-lg: "\F646";
