Link to standards page from homepage

--- a/index.njk
+++ b/index.njk
@@ -10,7 +10,7 @@ title: Home
 <img src="/about/images/smiling-medium.jpg" alt="Photo of me smiling">
 {% call md_block() %}
 Hi, I’m Lea and I love making things.
-Ι [design](/publications/#specifications) new web technologies implemented in browsers,
+Ι [design new web technologies implemented in browsers](/standards/),
 and [tools](/projects/) used by millions of developers.
 As a [W3C TAG member](https://en.wikipedia.org/wiki/Technical_Architecture_Group),
 I [review](https://github.com/w3ctag/design-reviews/) web technology proposals to ensure they benefit the Web.
