--- a/standards/index.njk
+++ b/standards/index.njk
@@ -1,6 +1,6 @@
 ---
 title: Web Technologies
-includes: '<script type=module src="/standards/time-line.js"></script>'
+includes: '<script type=module src="/assets/elements/time-line/time-line.js"></script>'
 page_css: true
 ---
 {% import "standards/_partials.njk" as partials with context %}
