--- a/projects/index.njk
+++ b/projects/index.njk
@@ -11,8 +11,10 @@ includes: |
 
 <p>
 Please note that this mainly contains open source tools I’ve developed, and is only a subset of my work.
-For example, it does not contain any of my work designing web technologies, documenting web platform design principles as a TAG member,
-or any of my pre-2011 entrepreneurial work.
+It does not contain any of <a href="/standards/">my work designing web technologies</a>,
+<a href="https://w3.org/TR/design-principles">documenting web platform design principles</a> or doing design reviews for proposed web technologies
+as a <a href="https://en.wikipedia.org/wiki/Technical_Architecture_Group">W3C TAG</a> member,
+or any of my early entrepreneurial work (2005-2011).
 
 <div mv-app="projects" class="projects" mv-source="../data/projects.json" mv-storage="https://github.com/leaverou/lea.verou.me/data/projects.json" mv-plugins="markdown">
 	<h2>[count(project)] projects ([count(type = &quot;lib&quot;)] libraries and [count(type = &quot;app&quot;)] apps)</h2>
