--- a/standards/index.njk
+++ b/standards/index.njk
@@ -9,7 +9,7 @@ page_css: true
 <div class="nutshell">
 This section contains an overview of web technologies I have designed or helped design.
 It includes a list of proposals, their current status, and a timeline of their development.
-In addition to listing my body of work, I’m hoping it can provide insight into the process with which new web technologies are developed.
+In addition to listing my body of work, I’m hoping it can provide insight into the process and timeline for new web technologies.
 </div>
 
 <div class="note">
