Move CSS for bar charts and callouts to separate files

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1,7 +1,9 @@
-@import url("prism.css");
-@import url("bootstrap-icons.css");
 @import url("fonts.css");
 @import url("tokens.css");
+@import url("prism.css");
+@import url("bootstrap-icons.css");
+@import url("components/callouts.css");
+@import url("components/bar-chart.css");
 
 *,
 *::before,
@@ -177,32 +179,6 @@ h4, h5, h6, summary {
 
 h5 {
 	color: var(--color-gray-medium);
-}
-
-h4:not(main > *, .post *),
-pre > code[data-file]::before,
-main aside::before,
-.callout > summary,
-.callout::before,
-.warning > summary,
-.warning::before,
-.info::before,
-.note::before,
-.tip::before {
-	--offset: .5em;
-
-	padding: .3em 1em;
-	width: max-content;
-	column-span: all;
-	align-self: start;
-	clip-path: polygon(var(--offset) 0, 100% 0, calc(100% - var(--offset)) 100%, 0 100%);
-	margin: 0;
-	margin-left: calc(-1 * var(--offset));
-	margin-bottom: .4rem;
-	background: var(--label-color, var(--color-accent));
-	font: 800 .8rem/1.2 var(--font-sans);
-	text-transform: uppercase;
-	color: white;
 }
 
 h5 {
@@ -1443,228 +1419,6 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 	margin-top: 1em;
 }
 
-main aside,
-.callout,
-.warning,
-.info,
-.note,
-.tip {
-	--_color-light: var(--color-light, var(--color-accent2-light2));
-	position: relative;
-	background: var(--_color-light);
-	padding: 1.2rem 1rem .8rem;
-	border-radius: .3rem;
-	margin-top: 1.6em;
-	margin-bottom: 1em;
-	font-family: var(--font-sans);
-	font-size: 80%;
-	font-weight: 500;
-
-	> :is(p, ul, ol, dl):where(:only-child, h4 + :last-child) {
-		margin-block: 0;
-	}
-
-	&:not(:has(> h4, > summary))::before {
-		content: var(--label);
-	}
-
-	& h4,
-	&::before,
-	&[open] > summary {
-		color: var(--_color-light);
-		margin-bottom: 0;
-	}
-
-	&::before {
-		display: block;
-	}
-
-	& h4,
-	&::before {
-		margin-top: -2.2em;
-		margin-bottom: .8em;
-	}
-
-	&[open] > summary {
-		position: absolute;
-		top: -1em;
-		left: 2.5rem;
-	}
-}
-
-main aside {
-	font-size: 75%;
-	color: var(--color-gray-40);
-
-	&[id=toc] {
-		/* TOC sidebar */
-		z-index: 1;
-		mix-blend-mode: multiply;
-
-		& > ul {
-			display: flex;
-			flex-flow: column;
-			gap: .8em;
-			margin: 0;
-			padding: 0;
-			list-style: none;
-		}
-
-		& a {
-			color: inherit;
-		}
-
-		.metabit {
-			font-size: inherit;
-			-webkit-font-smoothing: inherit;
-			color: inherit;
-		}
-
-		@media (width > 1700px) {
-			position: absolute;
-			--min-header-height: 12.8rem;
-			top: 2.5em;
-			left: calc(var(--content-margin) + var(--content-width) + 1em);
-			max-width: calc(var(--content-margin) - 2em);
-			background: none;
-
-			&:is(header.out-of-view + main *) {
-				position: fixed;
-			}
-
-			& > h4 {
-				color: white;
-			}
-		}
-
-		@media (width > 1700px) or (width < 1000px) {
-			.broken-page-container {
-				& > h4 {
-					margin-top: 1.5rem;
-				}
-			}
-		}
-
-		@media (width <= 1700px) {
-			margin-top: 3em;
-
-			@media (width > 1000px) {
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-				align-items: start;
-				justify-content: start;
-
-				& > * {
-					grid-column: 1;
-				}
-
-				& > .broken-page-container {
-					grid-column: 2;
-					grid-row: 1 / span 2;
-				}
-			}
-		}
-	}
-
-	&:not([id=toc]) {
-		/* Aside comments in an article */
-		&:not(:has(> h4))::before {
-			content: "Aside";
-			background: var(--color-accent3);
-		}
-
-		& a:where(:not(h4 > :only-child)) {
-			text-decoration: underline;
-
-			&:not(:hover) {
-				color: inherit;
-			}
-		}
-	}
-}
-
-.callout,
-.warning,
-.info,
-.note,
-.tip {
-	--code-background: hsl(0 0% 100% / .8);
-
-	@supports (color: color-mix(in lab, white, black)) {
-		--color-lighter: color-mix(in lab, var(--color), white 88%);
-		--color-darker: color-mix(in lab, var(--color), black 20%);
-	}
-
-	@media (width > 600px) {
-		padding-left: 4.5em;
-
-		&::after {
-			content: var(--icon);
-			position: absolute;
-			left: .5rem;
-			top: 50%;
-			transform: translateY(-50%);
-			font: 180%/1 bootstrap-icons;
-			background: white;
-			padding: .25em .3em .35em;
-			border-radius: 50%;
-			color: var(--color, var(--color-orange));
-		}
-
-		& > h4,
-		&::before {
-			left: 4.2rem;
-		}
-	}
-
-	a {
-		color: var(--link-color, var(--color, var(--color-accent)));
-		mix-blend-mode: multiply;
-		font-weight: 600;
-	}
-}
-
-.warning {
-	--label: "Here Be Dragons";
-	--icon: var(--icon-exclamation-triangle-fill);
-	--color: var(--color-orange);
-	--color-light: var(--color-accent2-light2);
-	--label-color: var(--color-orange);
-	--link-color: var(--color-darker);
-}
-
-.info,
-.question {
-	--icon: var(--icon-info-lg);
-	--color: var(--color-blue);
-	--color-light: var(--color-lighter);
-	--label-color: var(--color);
-	--link-color: var(--color-darker);
-}
-
-.info {
-	--label: "FYI";
-}
-
-.question {
-	--icon: var(--icon-question-lg);
-}
-
-.note,
-.tip {
-	--label: "Note";
-	--icon: var(--icon-clipboard2-check-fill);
-	--color: var(--color-green);
-	--color-light: var(--color-lighter);
-	--label-color: var(--color);
-	--link-color: var(--color-darker);
-}
-
-.tip {
-	--label: "Tip";
-	--icon: var(--icon-lightbulb-fill);
-}
-
 .tags-index {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
@@ -1692,71 +1446,6 @@ main aside {
 
 	&[reversed] li::marker {
 		color: hsl(var(--gray) 50% / calc(1 - var(--index) * .05));
-	}
-}
-
-.bar-chart {
-	position: relative;
-	display: flex;
-	align-items: end;
-	gap: .5em;
-	height: 6em;
-	margin-top: 2rem;
-	margin-bottom: 3rem;
-	border-right: 0;
-	font: 500 80% var(--font-sans);
-
-	> * {
-		position: relative;
-		--color: var(--color-accent);
-		display: flex;
-		align-items: flex-end;
-		flex: 1;
-		padding: .3em 0;
-		font-weight: bold;
-		background: var(--color);
-		justify-content: center;
-		height: calc(var(--p) / var(--max) * 100%);
-		color: white;
-
-		.label {
-			position: absolute;
-			top: calc(100% + .3em);
-			color: var(--color);
-		}
-
-		.result {
-			content: attr(data-title);
-			position: absolute;
-			bottom: calc(100% + .5em);
-			font-weight: 650;
-			color: var(--color);
-			text-align: center;
-			font-size: 80%;
-			display: none;
-
-			& .number {
-				display: block;
-				font-size: 1rem;
-				line-height: 1;
-				font-weight: 500;
-			}
-
-
-		}
-
-		&:hover,
-		&.selected {
-			--color: var(--color-accent3);
-
-			.result {
-				display: block;
-			}
-		}
-
-		&.selected:hover {
-			--color: var(--color-accent4);
-		}
 	}
 }
 
